恢复智能体输出DTO上一版实现